--- a/src/app/mt-contact-list/mt-contact-list.component.html
+++ b/src/app/mt-contact-list/mt-contact-list.component.html
@@ -1,6 +1,6 @@
 <!-- START: Add Contact Button -->
 <div class="list-header">
-  <div></div>
+  <input class="searchbox" type="text" placeholder="Search by name.."  #searchbox>
   <button class="button add-contact c-pointer" (click)="navigate('add')"><a><i class="fas fa-plus"></i> Add
       Contact</a></button>
 </div>
